# kakochessbot

./: .env.sample  .gitignore  README.md  bot.py  chess_model.onnx  main.py  model.py  pyproject.toml  stats.json  teacher.py  trainer.py
.github/workflows/: self-hosted-ci.yml
scratch/: contract_smoke.py
